<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_offline_download"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/offline_download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_offline_manage"
        android:title="@string/offline_manage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_offline_clear"
        android:title="@string/offline_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_route_to_target"
        android:title="@string/route_to_target"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_route_clear"
        android:title="@string/route_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_route_export"
        android:title="@string/route_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_route_hints"
        android:title="@string/route_hints"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_route_offline_segments"
        android:title="@string/route_offline_segments"
        app:showAsAction="never" />
</menu>
